--- a/tox.ini
+++ b/tox.ini
@@ -54,4 +54,5 @@ commands =
   {toxinidir}/scripts/ci/load_data.sh
   {toxinidir}/scripts/ci/run_tests.sh []
   {toxinidir}/scripts/ci/check-license.sh
-  coveralls
+  # force coveralls to succeeds as it's been flimsy
+  bash -c "coveralls" || exit 0
